FIX: footer width on mobile

--- a/footer.css
+++ b/footer.css
@@ -1,3 +1,7 @@
+#footer-container {
+    width: auto;
+}
+
 #footer-1-container {
     background-color: rgb(49, 49, 49);
     height: 100px;
